--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!-- Write your HTML in this file -->
-<a href="https://www.w3schools.com">This is a link</a>
+<a href="https://flatironschool.com">Flatiron School</a>
